Add Tailwind CSS and webhook test header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rotor Fault Detector | SSN Project</title>
+    
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-zinc-950 text-zinc-100 font-sans min-h-screen p-8">
 
     <header class="mb-10 text-center">
+        <h2> webhook test</h2>
         <h1 class="text-3xl font-bold text-emerald-500">SSN RotorGuard AI</h1>
         <p class="text-zinc-400">Real-Time Predictive Maintenance Dashboard</p>
     </header>
